--- a/AndroidJSCore/AndroidJSCore-library/build.gradle
+++ b/AndroidJSCore/AndroidJSCore-library/build.gradle
@@ -7,12 +7,15 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        minSdkVersion 11
+        minSdkVersion 14
         targetSdkVersion 24
         versionCode 3
         versionName "3.0.1"
-        setProperty("archivesBaseName", "AndroidJSCore-$versionName")
+        setProperty("archivesBaseName", "AndroidJSCore")
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        ndk {
+            abiFilters "armeabi-v7a", "x86"
+        }
     }
     buildTypes {
         debug {
@@ -23,13 +26,19 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    sourceSets { main { jniLibs.srcDirs 'libs' } }
+
+    externalNativeBuild {
+        ndkBuild {
+            path 'jni/Android.mk'
+        }
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.1.1'
+    compile 'org.webkit:android-jsc:r174650'
     androidTestCompile 'junit:junit:4.0'
     androidTestCompile 'com.android.support:support-annotations:24.1.1'
     androidTestCompile 'com.android.support.test:runner:0.5'
@@ -61,23 +70,31 @@ artifacts {
     archives javadocJar
 }
 
+def getRepositoryUrl() {
+    return GLOW_MAVEN
+}
+
+def getRepositoryUsername() {
+    return USERNAME
+}
+
+def getRepositoryPassword() {
+    return PASSWORD
+}
+
+uploadArchives {
+    repositories.mavenDeployer {
+        repository(url: getRepositoryUrl()) {
+            authentication(
+                    userName: getRepositoryUsername(),
+                    password: getRepositoryPassword())
+
+        }
+    }
+}
+
 
 apply plugin: 'com.github.dcendents.android-maven'
 
-group='com.github.ericwlange'
-
-task hemroidBuild(type: Exec) {
-    def rootDir = project.rootDir
-    def localProperties = new File(rootDir, "local.properties")
-    def ndkDir = ''
-    if (localProperties.exists()) {
-        Properties properties = new Properties()
-        localProperties.withInputStream { instr ->
-            properties.load(instr)
-        }
-        ndkDir = properties.getProperty('ndk.dir')
-    }
-    executable "$ndkDir/ndk-build"
-}
-
-preBuild.dependsOn hemroidBuild
+group='com.glow.android'
+version = '1.0'
